--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "webpack": "^4.8.3"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "webpack-cli": "^2.1.3",
     "google-maps": "^3.2.1"
   }
